# MandelbrotSimulator

./: CMakeLists.txt  README.md  mandelbrot.cpp
src/: a.out  main.cpp  mandelbrot.cl  mandelbrot.cpp  mandelbrot.hpp  mandelbrot_gpu.cpp  mandelbrot_gpu.hpp  test_CL.cpp  test_kernel.cpp  visualizer.cpp  visualizer.hpp
